--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="@string/search"
+        android:imeOptions="flagNoExtractUi"
         android:importantForAutofill="no"
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@id/search_button"
